--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ main {
     font-family: "Montserrat", sans-serif;
     font-size: 3rem;
     text-align: center;
-    color: white;
+    color: red;
 }
 
 h2 {
@@ -53,7 +53,7 @@ a:link {
 
 a:hover {
     font-family: Montserrat;
-    color: white;
+    color: #151d77;
 }
 
 a:visited {
@@ -86,17 +86,13 @@ article {
     margin: 5rem 50px;
 }
 
-.contactInfo {
-    display: flex;
-    justify-content: space-evenly;
-    align-content: space-between;
-    /* width: 600px; */
-    padding: 2rem;
+.funParagraph {
+    color: green;
 }
 
 footer {
     background: #151d77;
-    height: 150px;
-    /* padding: 2rem; */
+    height: 30px;
+    /* padding: 8px; */
     text-align: center;
 }
